--- a/deployment/coworking.yaml
+++ b/deployment/coworking.yaml
@@ -7,7 +7,7 @@ spec:
   selector:
     service: coworking
   ports:
-  - name: "5153"
+  - name: "5050"
     protocol: TCP
     port: 5153
     targetPort: 5153
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: coworking
-        image: <DOCKER_IMAGE_URI_FROM_ECR>
+        image: 103245859808.dkr.ecr.us-east-1.amazonaws.com/project3
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
@@ -45,12 +45,8 @@ spec:
           initialDelaySeconds: 5
           timeoutSeconds: 5
         envFrom:
-        - configMapRef:
-            name: <NAME OF THE ConfigMap>
-        env:
-        - name: DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: <NAME OF THE Secret>
-              key: <THE KEY FROM Secret WHICH has THE ENCODED PASSWORD>
+          - secretRef:
+              name: my-postgres-db-password
+          - configMapRef:
+              name: postgresql-service
       restartPolicy: Always
