--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,8 +9,8 @@ phases:
     commands:
       - echo Starting build at `date`
       - echo Building the Docker image...
-      - docker build -t co-working:latest .
-      - docker tag co-working:latest 103245859808.dkr.ecr.us-east-1.amazonaws.com/project3:latest
+      - docker build -t project3 .
+      - docker tag project3:latest 103245859808.dkr.ecr.us-east-1.amazonaws.com/project3:latest
   post_build:
     commands:
       - echo Completed build at `date`
