--- a/deployment/configmap.yaml
+++ b/deployment/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgresql-service
+  name: postgresql-configmap
 data:
-  DB_USERNAME: "myuser"
-  DB_NAME: "mydatabase"
-  DB_HOST: "10.100.76.130"
-  DB_PORT: "5432"
+  DB_USERNAME: myuser
+  DB_NAME: mydatabase
+  DB_HOST: postgresql-service
+  DB_PORT: '5432'
