--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,10 +9,10 @@ phases:
     commands:
       - echo Starting build at `date`
       - echo Building the Docker image...
-      - docker build -t project3:latest .
-      - docker tag project3:latest 103245859808.dkr.ecr.us-east-1.amazonaws.com/project3:latest
+      - docker build -t project3 .
+      - docker tag project3:latest 103245859808.dkr.ecr.us-east-1.amazonaws.com/project3
   post_build:
     commands:
       - echo Completed build at `date`
       - echo Pushing the Docker image...
-      - docker push 103245859808.dkr.ecr.us-east-1.amazonaws.com/project3:latest
+      - docker push 103245859808.dkr.ecr.us-east-1.amazonaws.com/project3
